--- a/src/stylesheets/pages/_page.scss
+++ b/src/stylesheets/pages/_page.scss
@@ -4,12 +4,9 @@
   padding-left: 12.5%;
   padding-right: calc(12.5% - 1rem);
   position: absolute;
-  width: 100%;
   min-height: 100%;
-  
-  &__content {
-    // padding: 0 16.3%;
-  }
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 415px) {
