--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -13,6 +13,7 @@
     &__container {
       width: 70%;
       min-width: 325px;
+      max-width: 1000px;
       display: flex; 
       flex-direction: column;
       align-items: flex-end;
@@ -51,6 +52,7 @@
 
   &__main {
     width: max(330px, 70%);
+    max-width: 900px;
     font-family: $paragraphFont;
     color: $home-color-2;
 
