--- a/src/stylesheets/pages/_page.scss
+++ b/src/stylesheets/pages/_page.scss
@@ -5,6 +5,7 @@
   padding-right: calc(12.5% - 1rem);
   position: absolute;
   min-height: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
 }
