updated logo & fixed issue with activeLink in sidebar being clickable

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -7,6 +7,12 @@ html {
   overflow-y: scroll;
 }
 
+@media screen and (max-width: 400px) {
+  html {
+    overflow-y: visible;
+  }
+}
+
 *,
 *::before,
 *::after {
