--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -153,6 +153,7 @@
 
             .link.activeLink {
               color: $main-color;
+              pointer-events: none;
             }
           }
         }
