--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -161,6 +161,8 @@
         &--sidebar.show {
           transform: translateX(-100%);
           transition: 200ms ease-in-out;
+          box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.247);
+
         }
       }
     }
