--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: #f3e8e0;
+  background-color: #e9dfd8;
 
   &__title {
     display: flex;
