touched up footer

--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -3,8 +3,6 @@
 // -----------------------------------------------------------------------------
 
 .Footer {
-  width: 100%;
-  margin-top: auto;
   margin-bottom: 5%;
   display: flex;
   justify-content: flex-start;
@@ -16,7 +14,8 @@
       margin: 0 1.5rem;
       position: relative;
       font-size: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);      
-      font-family: $titleFont;
+      font-family: $paragraphFont;
+      font-weight: 600;
       color: $dark-grey;
 
       &:first-child {
