--- a/src/stylesheets/pages/_page.scss
+++ b/src/stylesheets/pages/_page.scss
@@ -8,6 +8,10 @@
   min-width: 100%;
   display: flex;
   flex-direction: column;
+
+  &__content {
+    margin-bottom: 3rem;
+  }
 }
 
 @media screen and (max-width: 415px) {
