updated styles on projects page

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -52,6 +52,7 @@ $about-color-2: #9e7f10;
 /// @type Color
 $projects-color: #902A2A;
 $projects-color-2: #681e1e;
+$projects-color-3: #f0dfcf;
 
 /// Contact Title Color
 /// @type Color
