--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -29,6 +29,8 @@
           hue-rotate(340deg) 
           brightness(90%) 
           contrast(119%);
+        stroke-dasharray: 100;
+        animation: dash 5s linear;
       }
 
       .image-container {
@@ -60,5 +62,11 @@
       font-size: clamp(1.4rem, 1.1887rem + 0.9014vw, 2rem);
       margin-bottom: 1.5rem;
     }
+  }
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 1000;
   }
 }
