--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -8,15 +8,16 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
+    width: max(330px, 70%);
 
     &__container {
-      width: 70%;
+      width: 100%;
       min-width: 325px;
       max-width: 900px;
       display: flex; 
       flex-direction: column;
       align-items: flex-end;
+      position: relative;
       position: relative;
 
       .svg {
