Fixed footer fade in issue

--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -3,63 +3,64 @@
 // -----------------------------------------------------------------------------
 
 .Footer {
-  margin-bottom: 5%;
-  display: flex;
-  justify-content: flex-start;
+	margin-top: auto;
+	margin-bottom: 10%;
+	display: flex;
+	justify-content: flex-start;
 
-  &__link-container {
-    display: flex;
+	&__link-container {
+		display: flex;
 
-    a .Footer__icon {
-      margin: 0 1.5rem;
-      position: relative;
-      font-size: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);      
-      font-family: $paragraphFont;
-      font-weight: 600;
-      color: $dark-grey;
+		a .Footer__icon {
+			margin: 0 1.5rem;
+			position: relative;
+			font-size: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);
+			font-family: $paragraphFont;
+			font-weight: 600;
+			color: $dark-grey;
 
-      &:first-child {
-        margin-left: 0;
-      }
+			&:first-child {
+				margin-left: 0;
+			}
 
-      &::before, 
-      &::after {
-        @include bottom-bar;
-      }
+			&::before,
+			&::after {
+				@include bottom-bar;
+			}
 
-      &::before {
-        @include bottom-bar-before;
-      }
+			&::before {
+				@include bottom-bar-before;
+			}
 
-      &:hover::before {
-        @include bottom-bar-hover-before;
-      }
+			&:hover::before {
+				@include bottom-bar-hover-before;
+			}
 
-      &:hover {
-        transition: 350ms;
-      }
-      
-      &--resume:hover {
-        color: white;
-      }
+			&:hover {
+				transition: 350ms;
+			}
 
-      &--spotify:hover {
-        color: #1db954;
-      }
+			&--resume:hover {
+				color: white;
+			}
 
-      &--linkedin:hover {
-        color: #2867B2;
-      }
+			&--spotify:hover {
+				color: #1db954;
+			}
 
-      &--github:hover {
-        color: rgb(255, 255, 255); 
-      }
-    }
-  }
+			&--linkedin:hover {
+				color: #2867b2;
+			}
+
+			&--github:hover {
+				color: rgb(255, 255, 255);
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 400px) {
-  .Footer {
-    margin-bottom: 10%;
-  }
+	.Footer {
+		margin-bottom: 10%;
+	}
 }
