--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -3,177 +3,192 @@
 // -----------------------------------------------------------------------------
 
 .Header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  z-index: 999;
-  width: 100%;
-  height: 125px;
-  padding-left: min(5rem, 12.5%);
-  padding-right: 3%;
-  top: 3vw;
-  pointer-events: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 125px;
+	padding-left: min(5rem, 12.5%);
+	padding-right: 3%;
+	top: 3vw;
+	pointer-events: none;
 
-  a {
-    pointer-events: auto;
-    width: 5%;
-    min-width: 45px;
-    max-width: 100px;
-  }
+	a {
+		pointer-events: auto;
+		width: 5%;
+		min-width: 45px;
+		max-width: 100px;
+	}
 
-  &__logo {
-    width: 100%;
-    border: 3px solid white;
-    cursor: pointer;
-    transform: rotate(-270deg);
-  }
+	&__logo {
+		width: 100%;
+		border: 3px solid white;
+		cursor: pointer;
+		transform: rotate(-270deg);
+	}
 
-  &__logo:hover {
-    transition: 250ms;
-    border-color: black;
-  }
+	&__logo:hover {
+		transition: 250ms;
+		border-color: black;
+	}
 
-  &__navigation {
-    pointer-events: auto;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    
-    &__links.show .overflow-container {
-      transform: translateX(0);
-      transition: 350ms ease-in-out;
-    }
-    
-    &__links {
-      height: 3rem;
-      width: max(340px, 100%);
-      margin-right: 2rem;
-      padding-bottom: 0.25rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      overflow: hidden;
-      position: relative;
+	&__navigation {
+		pointer-events: auto;
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
 
-      &--sidebar {
-        display: none;
-      }
+		&__links.show .overflow-container {
+			transform: translateX(0);
+			transition: 350ms ease-in-out;
+		}
 
-      .overflow-container {
-        transform: translateX(110%);
-        transition: 350ms ease-in-out;
-      }
-      
-      .link {
-        position: relative; 
-        font-size: 1.25rem;
-        margin: 1rem 1.5rem;
-        font-family: 'NeueMontreal-Regular';
-        font-family: $titleFont;
-        color: $dark-grey;
-        transition: 350ms;
-      } 
+		&__links {
+			height: 3rem;
+			width: max(340px, 100%);
+			margin-right: 2rem;
+			padding-bottom: 0.25rem;
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			overflow: hidden;
+			position: relative;
 
-      .link::after,
-      .link::before {
-        @include bottom-bar;
-        bottom: -3px;
-      }
-  
-      .link::before {
-        @include bottom-bar-before;
-      }
-  
-      .link:hover::before {
-        @include bottom-bar-hover-before;
-      }
-  
-      .link.activeLink {
-        color: rgb(255, 255, 255);
-        transition: 350ms ease-in-out;
-        pointer-events: none;
-      }
-  
-      .link.activeLink::after,
-      .link.activeLink::before {
-        background: white;
-        bottom: -8px;
-        height: 0.25rem;
-        transition: bottom 300ms ease-in-out, height 300ms ease-in-out;
-      }
-    }
-  }
+			&--sidebar {
+				display: none;
+			}
+
+			.overflow-container {
+        position: relative;
+				transform: translateX(110%);
+				transition: 350ms ease-in-out;
+
+        &::after {
+          position: absolute;
+          content: "";
+          inset: 0;
+          top: -0.4rem;
+          padding: 1.5rem;
+          z-index: -1;
+
+          backdrop-filter: blur(5px); /* Chrome and Opera */
+          background-color: rgba(255, 255, 255, 0.392);
+
+        }
+			}
+
+			.link {
+				position: relative;
+				font-size: 1.25rem;
+				margin: 1rem 1.5rem;
+				font-family: "NeueMontreal-Regular";
+				font-family: $titleFont;
+				color: black;
+				transition: 350ms;
+			}
+
+			.link::after,
+			.link::before {
+				@include bottom-bar;
+				bottom: -3px;
+			}
+
+			.link::before {
+				@include bottom-bar-before;
+			}
+
+			.link:hover::before {
+				@include bottom-bar-hover-before;
+			}
+
+			.link.activeLink {
+				color: rgb(255, 255, 255);
+				transition: 350ms ease-in-out;
+				pointer-events: none;
+			}
+
+			.link.activeLink::after,
+			.link.activeLink::before {
+				background: white;
+				bottom: -8px;
+				height: 0.25rem;
+				transition: bottom 300ms ease-in-out, height 300ms ease-in-out;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 1160px) {
-  .Header {
-    padding-left: 3%;
-    padding-left: calc(12.5% - 54px);
-  }
+	.Header {
+		padding-left: 3%;
+		padding-left: calc(12.5% - 54px);
+	}
 }
 
 @media screen and (max-width: 750px) {
-  .Header {
+	.Header {
+		&__navigation {
+			&__links {
+				display: none;
 
-    &__navigation {
+				&--sidebar {
+					display: flex;
+					justify-content: center;
+					padding-top: 15vh;
+					position: fixed;
+					right: -30%;
+					top: 0;
+					height: 100vh;
+					background-color: white;
+					width: 30%;
+					z-index: -1;
+					transition: transform 200ms ease-in-out;
 
-      &__links {
-        display: none;
+					&__container {
+						display: flex;
+						flex-direction: column;
+						padding-right: 20%;
+						padding-left: 10%;
 
-        &--sidebar {
-          display: flex;
-          justify-content: center;
-          padding-top: 15vh;
-          position: fixed;
-          right: -30%;
-          top: 0;
-          height: 100vh;
-          background-color: white;
-          width: 30%;
-          z-index: -1;
-          transition: transform 200ms ease-in-out;
+						.link {
+							color: black;
+							font-family: $titleFont;
+							font-size: clamp(
+								1.1rem,
+								0.6385rem + 2.0513vw,
+								1.6rem
+							);
+							margin-bottom: 2.5rem;
+							transition: color 350ms ease-in-out;
 
-          &__container {
-            display: flex;
-            flex-direction: column;
-            padding-right: 20%;
-            padding-left: 10%;
+							&:hover {
+								color: #db806c;
+								transition: 350ms ease-in-out;
+							}
+						}
 
-            .link {
-              color: black;
-              font-family: $titleFont;
-              font-size: clamp(1.1rem, 0.6385rem + 2.0513vw, 1.6rem);             
-              margin-bottom: 2.5rem;
-              transition: color 350ms ease-in-out;
+						.link.activeLink {
+							color: $main-color;
+							pointer-events: none;
+						}
+					}
+				}
 
-              &:hover {
-                color: #db806c;
-                transition: 350ms ease-in-out;
-              }
-            }
-
-            .link.activeLink {
-              color: $main-color;
-              pointer-events: none;
-            }
-          }
-        }
-
-        &--sidebar.show {
-          transform: translateX(-100%);
-          transition: 200ms ease-in-out;
-          box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.247);
-
-        }
-      }
-    }
-  }
+				&--sidebar.show {
+					transform: translateX(-100%);
+					transition: 200ms ease-in-out;
+					box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.247);
+				}
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 400px) {
-  .Header {
-    padding-left: 3%;
-    top: 0vh;
-  }
+	.Header {
+		padding-left: 3%;
+		top: 0vh;
+	}
 }
