--- a/src/stylesheets/pages/_about.scss
+++ b/src/stylesheets/pages/_about.scss
@@ -1,88 +1,96 @@
-.About {
-    background-color: #e0dcd2;
+.About + .Header {
     
-    &__main {
-        color: $about-color-2;
-        font-family: $paragraphFont;
-        width: min(700px, 100%);
+}
 
-        &__paragraphs {
-            &__content {
-                &__paragraph {
-                    font-size: clamp(1.05rem, 0.8333rem + 0.963vw, 1.7rem);
-                    margin-bottom: 0.5rem;
-                }
+.About {
+	background-color: #e0dcd2;
 
-                &__media {
-                    margin-bottom: 2.5rem;
-                    width: 95%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: flex-start;
-                    align-items: flex-start;
+	.link.activeLink {
+		color: $about-color-2 !important;
+	}
 
-                    &--1 {
-                        width: 100%;
-                    }
+	&__main {
+		color: $about-color-2;
+		font-family: $paragraphFont;
+		width: min(700px, 100%);
 
-                    &--2 {
-                        a {
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            box-sizing: border-box;
-                            width: 45%;
-                            margin: 1%;
+		&__paragraphs {
+			&__content {
+				&__paragraph {
+					font-size: clamp(1.05rem, 0.8333rem + 0.963vw, 1.7rem);
+					margin-bottom: 0.5rem;
+				}
 
-                            &:first-child,
-                            &:nth-child(3) {
-                                margin-left: 0;
-                            }
+				&__media {
+					margin-bottom: 2.5rem;
+					width: 95%;
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: flex-start;
+					align-items: flex-start;
 
-                            img {
-                                border: 5px solid white;
-                                width: 100%;
-                                height: 100%;
+					&--1 {
+						width: 100%;
+					}
 
-                                &:hover {
-                                    transition: border 200ms;
-                                    border: 5px solid black;
-                                }
-                            }
+					&--2 {
+						a {
+							display: flex;
+							flex-direction: column;
+							align-items: center;
+							box-sizing: border-box;
+							width: 45%;
+							margin: 1%;
 
-                            .track-info {
-                                font-size: clamp(
-                                    0.8rem,
-                                    0.7333rem + 0.2963vw,
-                                    1rem
-                                );
-                                color: black;
-                                text-align: center;
+							&:first-child,
+							&:nth-child(3) {
+								margin-left: 0;
+							}
 
-                                &:hover {
-                                    color: white;
-                                }
-                            }
-                        }
-                    }
+							img {
+								border: 5px solid white;
+								width: 100%;
+								height: 100%;
 
-                    img {
-                        box-sizing: border-box;
-                        width: 45%;
-                        margin: 1%;
-                        border: 5px solid white;
+								&:hover {
+									transition: border 200ms;
+									border: 5px solid black;
+								}
+							}
 
-                        &:first-child,
-                        &:nth-child(3) {
-                            margin-left: 0;
-                        }
-                    }
-                }
-            }
-        }
-    }
+							.track-info {
+								font-size: clamp(
+									0.8rem,
+									0.7333rem + 0.2963vw,
+									1rem
+								);
+								color: black;
+								text-align: center;
+
+								&:hover {
+									color: white;
+								}
+							}
+						}
+					}
+
+					img {
+						box-sizing: border-box;
+						width: 45%;
+						margin: 1%;
+						border: 5px solid white;
+
+						&:first-child,
+						&:nth-child(3) {
+							margin-left: 0;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 .emphasize {
-    color: rgb(41, 5, 5);
+	color: rgb(41, 5, 5);
 }
